# vtracer-rest

./: Cargo.toml  Procfile  README.md  dev.sh  mongodb_init.py  requirements.txt  requirements_old.txt  run.sh
.heroku/: run.sh
.profile.d/: buildpack_env.sh
pyvtracer/: Cargo.toml
pyvtracer/src/: config.rs  converter.rs  lib.rs
service/: __init__.py  config.py  wsgi.py
service/base/: Contents.py  OAuth.py  Screen.py  Vision.py  __init__.py  database.py
service/static/: app.js  nolida.min.js  nolida.min.js.map
service/templates/: index.html
test/: app.js  index.html
