[package]
name = "vlib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vlib"
crate-type = ["cdylib"]

[dependencies]
clap = "2.33.3"
image = "0.23.10"
visioncortex = "0.6.0"

[dependencies.pyo3]
version = "0.14.3"
features = ["extension-module"]
